[package]
name = "yagi"
version = "0.0.1"
repository = "https://github.com/brian-armstrong/yagi"
description = "Batteries-included DSP library"
license = "MIT"
license-file = "LICENSE"

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[dependencies]
libm = "0.2.8"
num-complex = "0.4.6"
num-traits = "0.2.19"
rustfft = "6.2.0"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
lazy_static = "1.5.0"
rand = "0.8.5"
test_macro = { path = "test_macro" }

[features]
simd = []
